--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -38,7 +38,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">about</a>
+                                <a class="nav-link" href="{% url 'about' %}">about</a>
                             </li>
                             {% if user.is_authenticated %}
                                 <li class="nav-item">
