--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -61,6 +61,8 @@
         {% block body %}
         {% endblock %}
 
+
+
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
                 integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
                 crossorigin="anonymous"></script>
@@ -79,7 +81,7 @@
         var modal = document.getElementById('myModal');
 
         // Get the image and insert it inside the modal - use its "alt" text as a caption
-        var img = document.getElementById('myImg');
+        var img = document.getElementsByClassName('myImg');
         var modalImg = document.getElementById("img01");
         var captionText = document.getElementById("caption");
         img.onclick = function(){
