--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -13,7 +13,7 @@
                         <i>{{ posts.publish_date }}</i> by <a href="https://twitter.com/tu4ndoan">Tuan Doan</a>
                     </div>
                     <br><br>
-                    <img class="myImg" src="{{ posts.feature_image.url }}">
+                    <img id="myImg" src="{{ posts.feature_image.url }}">
                     <div id="myModal" class="modal">
                       <span class="close">×</span>
                       <img class="modal-content" id="img01">
