--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -81,7 +81,7 @@
         var modal = document.getElementById('myModal');
 
         // Get the image and insert it inside the modal - use its "alt" text as a caption
-        var img = document.getElementsByClassName('myImg');
+        var img = document.getElementById('myImg');
         var modalImg = document.getElementById("img01");
         var captionText = document.getElementById("caption");
         img.onclick = function(){
