switch version of bootstrap from 4 to 3.3

--- a/blog/static/blog/style.css
+++ b/blog/static/blog/style.css
@@ -107,6 +107,10 @@ a:hover {
     background-color: #6c757d;
 }
 
+.share-btn:hover {
+    color: white;
+}
+
 .social-share {
     display: block;
     margin: auto;
