change version of bootstrap

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -9,9 +9,10 @@
         <meta name="author" content="">
 
         {% load staticfiles %}
+
         <link rel="stylesheet"
-              href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-              integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+              href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
+              integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
               crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
         <link rel="stylesheet" href="{% static 'fontawesome/css/font-awesome.min.css' %}">
@@ -21,48 +22,44 @@
     </head>
     <body>
         <div class="container-fluid">
-            <nav class="navbar navbar-inverse navbar-fixed-top">
-                <div class="container-fluid">
-                    <div class="navbar-header">
-                         <a class="navbar-brand" href="https://teqitez.herokuapp.com/">
-                            <i class="btn btn-dark">T</i>
-                            teqitez
-                         </a>
-                    </div>
-                    <button class="navbar-toggle"
-                            type="button" data-toggle="collapse" data-target="#navbarCollapse"
-                            aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <div class="navbar-collapse collapse" id="navbarCollapse">
-                            <ul class="nav navbar-nav navbar-right">
+            <nav class="navbar navbar-dark bg-dark navbar-expand-md fixed-top">
+                <div class="navbar-header">
+                     <a class="navbar-brand" href="https://teqitez.herokuapp.com/">
+                        <i class="btn btn-dark">T</i>
+                        teqitez
+                     </a>
+                </div>
+                <button class="navbar-toggler"
+                        type="button" data-toggle="collapse" data-target="#navbarCollapse"
+                        aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse collapse" id="navbarCollapse">
+                        <ul class="nav navbar-nav navbar-right">
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'blog:index' %}">
+                                    <i class="fa fa-home"></i>
+                                    home
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'about' %}">about</a>
+                            </li>
+                            {% if user.is_authenticated %}
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'blog:index' %}">
-                                        <i class="fa fa-home"></i>
-                                        home
-                                    </a>
+                                    <a class="nav-link" href="{% url 'blog:post-add' %}">write</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'about' %}">about</a>
+                                    <a class="nav-link" href="{% url 'blog:logout' %}">logout</a>
                                 </li>
-                                {% if user.is_authenticated %}
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="{% url 'blog:post-add' %}">write</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="{% url 'blog:logout' %}">logout</a>
-                                    </li>
-                                {% endif %}
-                            </ul>
-                            <form class="navbar-form navbar-right">
-                                <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                                <button class="btn my-2 my-sm-0" type="submit">
-                                    <i class="fa fa-search"></i>
-                                </button>
-                            </form>
-                    </div>
+                            {% endif %}
+                        </ul>
+                        <form class="form-inline mt-2 mt-md-0">
+                            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+                            <button class="btn my-2 my-sm-0" type="submit">
+                                <i class="fa fa-search"></i>
+                            </button>
+                        </form>
                 </div>
             </nav>
         </div>
@@ -74,8 +71,11 @@
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
                 integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
                 crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-                integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
+                integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
+                crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"
+                integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
                 crossorigin="anonymous"></script>
         <script src="https://getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js"></script>
 
