--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -25,7 +25,7 @@
             <nav class="navbar navbar-dark bg-dark navbar-expand-md fixed-top">
                 <div class="navbar-header">
                      <a class="navbar-brand" href="https://teqitez.herokuapp.com/">
-                        <i class="btn bg-white" style="border-radius: 10px;">T</i>
+                        <i class="btn bg-white text-dark" style="border-radius: 10px;">T</i>
                         teqitez
                      </a>
                 </div>
