edit about page

--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -4,7 +4,9 @@
     <div class="container text-center bg-white post">
         <h1>About me</h1>
         <p>I'm a developer who loves to create. Up to this point I've been in several projects, you can check them out
-        in my github account.</p>
-        <h3>more</h3>
+        in my github account.</p><br>
+        <a href="https://github.com/tu4ndoan/">
+            <i class="fa fa-github fa-2x share-btn"></i> Github
+        </a>
     </div>
 {% endblock%}
