--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -6,7 +6,7 @@
         <p>I'm a developer who loves to create. Up to this point I've been in several projects, you can check them out
         in my github account.</p><br>
         <a href="https://github.com/tu4ndoan/">
-            <i class="fa fa-github fa-2x github-share"></i> tu4ndoan
+            <i class="fa fa-github-square fa-3x github-share"></i>
         </a>
     </div>
 {% endblock%}
