--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -5,8 +5,8 @@
         <h1>About me</h1>
         <p>I'm a developer who loves to create. Up to this point I've been in several projects, you can check them out
         in my github account.</p><br>
-        <a href="https://github.com/tu4ndoan/">
-            <i class="fa fa-github-square fa-3x github-share"></i>
+        <a href="https://github.com/tu4ndoan/" class="btn">
+            <i class="fa fa-github fa-3x"></i>
         </a>
     </div>
 {% endblock%}
