add pagination, new logo

--- a/blog/static/blog/style.css
+++ b/blog/static/blog/style.css
@@ -223,3 +223,15 @@ a:hover {
     display: block;
     margin: auto;
 }
+
+.pagination {
+    display:block;
+    margin: auto;
+}
+
+#logo {
+    width: 20px;
+    height: auto;
+    border-radius: 50%;
+}
+
