--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -3,19 +3,19 @@
 {% block body %}
     <div class="container text-center bg-white post">
         <br><br>
-        <img src="../../../media/mypicture.jpeg" id="myImg" class="img-circle">
+        <img src="../../../media/blog_logo.jpeg" id="myImg" class="img-circle">
         <div id="myModal" class="modal">
               <span class="close">×</span>
               <img class="modal-content" id="img01">
               <div id="caption"></div>
-        </div>
-        <h2>About me</h2>
+        </div><br>
+        <h2>about me</h2>
         <p style="margin: 20px 20px 20px 20px;">I'm a developer who loves to create. You can check them out
         in my github account or in the projects page for more detail.</p>
         <a href="https://github.com/tu4ndoan/">github</a>
         <a href="https://linkedin.com/in/tu4ndoan/">linkedin</a>
         <hr>
-        <h2>About this website</h2>
+        <h2>about the technologist </h2>
         <p>Teqitez is a technology and lifestyle blog made using Django framework</p><br>
     </div>
 {% endblock%}
