--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -17,7 +17,7 @@
         <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
         <link rel="stylesheet" href="{% static 'fontawesome/css/font-awesome.min.css' %}">
         <link rel='stylesheet' type="text/css" href="{% static 'blog/style.css' %}" />
-        <link rel="icon" href="{% static 'blog/images/favicon.ico'%}"/>
+        <link rel="icon" href="{% static 'blog/images/icon.ico'%}"/>
 
     </head>
     <body>
@@ -25,7 +25,7 @@
             <nav class="navbar navbar-dark bg-dark navbar-expand-md fixed-top">
                 <div class="navbar-header">
                      <a class="navbar-brand" href="https://teqitez.herokuapp.com/">
-                        <i class="btn bg-white text-dark" style="border-radius: 10px;">T</i>
+                        <img src="../../../media/blog_logo.jpeg" id="logo">
                         teqitez
                      </a>
                 </div>
