--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -5,7 +5,9 @@
     <div class="container post-container">
         <h1 class="text-light text-center">{{ blogpost.post_title}}</h1>
         <div class="bg-white post-container">
+        <div class="post-img-container">
             <img id="myImg" src="{{ blogpost.feature_image }}" alt="nice and free images" class="post-img">
+        </div>
             <!-- The Modal -->
             <div id="myModal" class="modal">
               <span class="close">×</span>
