--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -14,7 +14,9 @@
                         <i>{{ posts.publish_date }}</i> by <a href="https://twitter.com/tu4ndoan">Tuan Doan</a>
                     </div>
                     <br><br>
+                <div class="post-img-container">
                     <img id="myImg" src="{{ posts.feature_image }}" class="post-img">
+                </div>
                     <div id="myModal" class="modal">
                       <span class="close">×</span>
                       <img class="modal-content" id="img01">
