--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -22,7 +22,7 @@
     </head>
     <body>
         <div class="container-fluid">
-            <nav class="navbar navbar-dark bg-dark navbar-expand-md fixed-top">
+            <nav class="navbar navbar-expand-md navbar-dark fixed-top text-light">
                 <div class="navbar-header">
                      <a class="navbar-brand" href="https://teqitez.herokuapp.com/">
                         <img src="../../../media/blog_logo.jpeg" id="logo">
@@ -56,7 +56,7 @@
                         </ul>
                         <form class="form-inline mt-2 mt-md-0">
                             <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                            <button class="btn my-2 my-sm-0 btn-dark" type="submit">
+                            <button class="btn my-2 my-sm-0 " type="submit">
                                 <i class="fa fa-search"></i>
                             </button>
                         </form>
