--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -72,26 +72,22 @@
 
                 <a class="btn btn-primary addcomment" href="{% url 'blog:add_comment_to_post' pk=blogpost.pk %}">Add comment</a>
                 {% for comment in blogpost.comments.all %}
-                    {% if user.is_authenticated or comment.approved_comment %}
+
                         <div class="comment-container">
                             <div class="date">
-                                {% if not comment.approved_comment %}
+                                {% if user.is_authenticated %}
                                     <a class="btn" href="{% url 'blog:comment_remove' pk=comment.pk %}">
+                                {% endif %}
                                         <span class="fa fa-times" style="color: #bd2130;"></span>
                                     </a>
-                                    <a class="btn" href="{% url 'blog:comment_approve' pk=comment.pk %}">
-                                        <span class="fa fa-check" style="color: green;"></span>
-                                    </a>
-                                {% endif %}
                             </div>
-                            <p class="comment-content">"{{ comment.text }}"</p>
-                            <span class="text-success comment-author">{{ comment.name }} </span>
-                            <span class="comment-date"> at {{ comment.created_date }}</span>
+                            <p class="comment-content">"{{ comment.comment_content }}"</p>
+                            <span class="text-success comment-author">{{ comment.commenter }} </span>
+                            <span class="comment-date"> at {{ comment.comment_date }}</span>
                         </div>
                         <br>
-                    {% endif %}
                 {% empty %}
-                    <p>No comments here yet</p>
+                    <p>No comments yet, be the first to comment: <a href="{% url 'blog:add_comment_to_post' pk=blogpost.pk %}">Click</a></p>
                 {% endfor %}
         </div>
         <br>
