renamed some variables and update about page

--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -3,7 +3,7 @@
 {% block body %}
     <div class="container bg-white post">
         <br><br>
-        <img src="../../../media/blog_logo.jpeg" id="myImg" class="img-circle">
+        <img src="../../../media/me.PNG" id="myImg" class="img-circle">
         <div id="myModal" class="modal">
               <span class="close">×</span>
               <img class="modal-content" id="img01">
