--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -54,9 +54,9 @@
                                 </li>
                             {% endif %}
                         </ul>
-                        <form class="form-inline mt-2 mt-md-0">
-                            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                            <button class="btn my-2 my-sm-0 " type="submit">
+                        <form class="form-inline">
+                            <input class="form-control" type="text" placeholder="Search" aria-label="Search">
+                            <button class="btn" type="submit">
                                 <i class="fa fa-search"></i>
                             </button>
                         </form>
