--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -25,7 +25,7 @@
             <nav class="navbar navbar-expand-md navbar-dark fixed-top text-light">
                 <div class="navbar-header">
                      <a class="navbar-brand" href="https://teqitez.herokuapp.com/">
-                        <img src="../../../media/blog_logo.jpeg" id="logo">
+                        <img src="{% static 'blog/images/blog_logo.jpeg' %}" id="logo">
                         teqitez
                      </a>
                 </div>
