--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -3,30 +3,60 @@
 {% block body %}
     <div class="container bg-white post">
         <br><br>
+        <div id="about">
+        <div class="about-me">
         <img src="../../../media/me.PNG" id="myImg" class="img-circle">
         <div id="myModal" class="modal">
               <span class="close">×</span>
               <img class="modal-content" id="img01">
               <div id="caption"></div>
         </div><br>
-        <h2 class="text-center">about teqitez </h2>
-        <p class="text-center">Teqitez is a technology and lifestyle blog designed for gentlemen with high </p>
-        <h4 style="margin: 0 100px 0 100px;">technology</h4>
-        <p>simple and basic, yet necessary bits of knowledge, information about the innovating world</p>
-        <h4 style="margin: 0 100px 0 100px;">lifestyle</h4>
-        <p>Discover your true identity, what you may feel blessed to find out about yourself. What is wrong with your current lifestyle? Read and fix it, you only live once, shouldn't you live it good?.</p>
-        <hr>
-        <h2 class="text-center">my readers</h2>
-        <p>readers I hope to approach is gentlemen and other people, who love technology and want to innovate, prepare themselves to face the innovative technology era.</p>
-        <hr>
-        <h2 class="text-center">about me</h2>
-        <p>I'm a developer who loves to create. You can check them out
-        in my github.</p>
-        <div class="text-center">See me on:<br>
-            <a href="https://github.com/tu4ndoan/">github</a> or
-            <a href="https://linkedin.com/in/tu4ndoan/">linkedin</a>
+
+            <h2 class="text-center"> about me </h2><br>
+            <p> I'm a seeker, a finder, an explorer who is always looking for something that even me myself couldn't make out!
+                What I always know is that I never stop. I never stop evolving because that's how the world, humanity, technology and everything else work.
+                Beside being an awesome explorer, I'm also a creator, not the creator, but I love to create, to make things.
+                I want to live a life that when I grow older, I have something to pass to younger generations, to my pupils *lol*.<br><br>
+                "I can't stop, and I don't want to either!" - <a href="#">Wilee</a> in "Premium Rush(2012)"
+            </p>
         </div>
         <hr>
+        <div class="about-t">
+            <img src="../../../media/mypicture.jpeg" id="myImg" class="img-circle"><br>
+            <h2 class="text-center">about T</h2><br>
+            <p class="text-left">I called this site "T", initial for my first name because I think this blog is also a place I can express 100% of myself.
+                T consists of 2 intended categories which are "technology" and "lifestyle".</p>
+            <div class="tech text-right">
+                <h4>technology</h4>
+                <p>Just some technology related projects I do in my free time.</p>
+            </div>
+            <div class="life text-left">
+                <h4 >lifestyle</h4>
+                <p>Just some thoughts and idea about this life and how I could improve my lifestyle.</p>
+            </div>
+            <hr>
+            <div class="reader">
+                <h2 class="text-center">about you</h2>
+                <p>If you find yourself in the list below, well, hit that subscribe button immediately! Types of reader I hope to approach are: <br>
+                </p>
+                <ul>
+                    <li><a href="#">students</a> who also like creating small, simple but awesome stuffs.</li>
+                    <li><a href="#">people</a> who can't stand staying in same one place doing same boring job everyday.</li>
+                    <li><a href="#">adventurer</a> who love discover the world with their own eyes and feet.</li>
+                    <li><a href="#">gentlemen</a> who want to live a better life.</li>
+                    <li><a href="#">people</a> who want to make their life legendary.</li>
+                </ul>
+            </div>
+        </div>
+
+        <hr>
+        <div class="text-center">More of me:<br>
+            <a href="https://github.com/tu4ndoan/">github</a> &nbsp;
+            <a href="https://linkedin.com/in/tu4ndoan/">linkedin</a> &nbsp;
+            <a href="https://facebook.com/tu4ndoan/">facebook</a>
+        </div>
+        <hr>
+        </div>
     </div>
     <div class="footer container-fluid container align-self-center text-center text-light">&copy; 2017 Tuan Doan. All rights reserved</div>
 
