--- a/blog/templates/blog/cover.html
+++ b/blog/templates/blog/cover.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title> teqitez </title>
+        <title> T - how I did it! </title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="">
@@ -15,7 +15,7 @@
         <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
         <link rel="stylesheet" href="{% static 'fontawesome/css/font-awesome.min.css' %}">
         <link rel='stylesheet' type="text/css" href="{% static 'blog/cover.css' %}" />
-        <link rel="shortcut icon" type="image/png" href="{% static 'blog/images/favicon.ico'%}"/>
+        <link rel="shortcut icon" type="image/png" href="{% static 'blog/images/icon.ico'%}"/>
     </head>
 
     <body>
@@ -24,8 +24,8 @@
                  <div class="cover-container">
                      <div class="inner cover">
                          <img src="">
-                         <h1 class="cover-heading">Welcome to teqitez</h1>
-                         <p class="lead">discover cool technology related information and the meaning of life</p>
+                         <h1 class="cover-heading">T</h1>
+                         <p class="lead">how T did it!</p>
                          <br>
                          <a href="{% url 'blog:index' %}" class="btn btn-primary">Visit</a>
                      </div>
