one step closer to completion

--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -1,5 +1,6 @@
 {% extends 'blog/base.html' %}
 {% block active %}active{% endblock %}
+{% block title %}About{% endblock %}
 {% block body %}
     <div class="container bg-white post">
         <br><br>
