--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> teqitez </title>
+        <title> {% block title %}{% endblock %} </title>
 
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="">
-        <meta name="author" content="">
+        <meta name="description" content="an explorer's awesome website">
+        <meta name="author" content="T">
 
         {% load staticfiles %}
 
