--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,5 +1,6 @@
 {% extends 'blog/base.html' %}
 {% block active_home %}active{% endblock %}
+{% block title %} T | home {% endblock %}
 <div class="container-fluid">
     {% block body %}
 
