update images' style format

--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -1,6 +1,6 @@
 {% extends 'blog/base.html' %}
 {% block active %}active{% endblock %}
-{% block title %}About{% endblock %}
+{% block title %}T | About{% endblock %}
 {% block body %}
     <div class="container bg-white post">
         <br><br>
