--- a/blog/templates/blog/cover.html
+++ b/blog/templates/blog/cover.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title> T - how I did it! </title>
+        <title> T - be awesome </title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="">
@@ -25,7 +25,7 @@
                      <div class="inner cover">
                          <img src="">
                          <h1 class="cover-heading">T</h1>
-                         <p class="lead">how T did it!</p>
+                         <p class="lead">Because awesomeness has no limit!</p>
                          <br>
                          <a href="{% url 'blog:index' %}" class="btn btn-primary">Visit</a>
                      </div>
