--- a/blog/static/blog/style.css
+++ b/blog/static/blog/style.css
@@ -70,7 +70,7 @@ body {
 .post-img-container {
     width: 100%;
     background-color: black;
-    border-radius: 5px 5px 0 0;
+    border-radius: 5px 5px 5px 5px;
 }
 
 .hooker {
@@ -256,4 +256,9 @@ a:hover {
 img {
     width: 100%;
     background-color: #000000;
+}
+
+#paging {
+    width: 50%;
+    align-self: center;
 }
