--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -35,11 +35,11 @@
                             <!--<span style="color: green">&lt;&sol;awesome&gt;</span>-->
                         </a>
                     </h5>
-                    <br>
                     {% if user.is_authenticated %}
                         <a class="btn btn-dark" href="{% url 'blog:post-delete' posts.id %}">delete</a>
                         <a class="btn btn-light" href="{% url 'blog:post-update' posts.id %}">edit</a>
                     {% endif %}<br>
+                        <h6>share this post:</h6>
                         <div class="social-share text-center">
                             {% with "share this in" as share_txt %}
                                 {% with "https://teqitez.herokuapp.com/" as host %}
@@ -93,18 +93,29 @@
             {% endfor %}
 
         {% if is_paginated %}
-            <div class="pagination container text-center text-light bg-white" >
+            <div class="pagination text-center text-light bg-white paging" style="width: 30%;" >
                 <span class="page-links text-center -align-right" >
                     {% if page_obj.has_previous %}
-                        <a href="/blog?page={{ page_obj.previous_page_number }}">previous </a>
+                        <a href="/blog?page={{ page_obj.previous_page_number }}">
+                            <i class="fa fa-chevron-left text-dark"></i>
+                        </a>
                     {% else %}
-                        <span class="text-muted">previous</span>&nbsp;
+                        <span class="text-muted">
+                            <i class="fa fa-chevron-left text-dark"></i>
+                        </span>&nbsp;
                     {% endif %}
-                    <span class="page-current text-center">
-                        Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
+                    <span class="page-current text-center text-dark">
+                        Page {{ page_obj.number }} / {{ page_obj.paginator.num_pages }}
                     </span>
                     {% if page_obj.has_next %}
-                        <a href="/blog?page={{ page_obj.next_page_number }}"> &nbsp;next</a>
+                        <a href="/blog?page={{ page_obj.next_page_number }}"> &nbsp;
+                            <i class="fa fa-chevron-right text-dark"></i>
+                        </a>
+                    {% else %}
+                        <span class="text-muted">
+                            <i class="fa fa-chevron-right text-dark"></i>
+                        </span>&nbsp;
+
                     {% endif %}
                 </span>
             </div>
