--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -43,7 +43,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link {% block active %}{% endblock %}" href="{% url 'about' %}"><i class="fa fa-pencil-square-o"></i>about</a>
+                                <a class="nav-link {% block active %}{% endblock %}" href="{% url 'about' %}"><i class="fa fa-user-circle-o"></i>about</a>
                             </li>
                             {% if user.is_authenticated %}
                                 <li class="nav-item">
