add comment count and some icon

--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -18,7 +18,7 @@
                 What I always know is that I never stop. I never stop evolving because that's how the world, humanity, technology and everything else work.
                 Beside being an awesome explorer, I'm also a creator, not the creator, but I love to create, to make things.
                 I want to live a life that when I grow older, I have something to pass to younger generations, to my pupils *lol*.<br><br>
-                "I can't stop, and I don't want to either!" - <a href="#">Wilee</a> in "Premium Rush(2012)"
+                And below all that, I'm a high-functioning sociopath ;)
             </p>
         </div>
         <hr>
