--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -43,7 +43,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link {% block active %}{% endblock %}" href="{% url 'about' %}"><i class="fa fa-user-circle-o"></i>about</a>
+                                <a class="nav-link {% block active %}{% endblock %}" href="{% url 'about' %}"><i class="fa fa-user-circle-o"></i>&nbsp;about</a>
                             </li>
                             {% if user.is_authenticated %}
                                 <li class="nav-item">
@@ -54,12 +54,13 @@
                                 </li>
                             {% endif %}
                         </ul>
+                <!--
                         <form class="form-inline">
                             <input class="form-control" type="text" placeholder="Search" aria-label="Search">
                             <button class="btn" type="submit">
                                 <i class="fa fa-search"></i>
                             </button>
-                        </form>
+                        </form> -->
                 </div>
             </nav>
         </div>
