debug false comments badge, hook font

--- a/blog/static/blog/style.css
+++ b/blog/static/blog/style.css
@@ -7,6 +7,10 @@ body {
     height: 100%;
 }
 
+.title {
+    font-family: 'Italianno', cursive;
+}
+
 #footer {
     position: absolute;
     text-align: center;
